--- a/public/README.html
+++ b/public/README.html
@@ -19,8 +19,8 @@
 		<li>3-4 Players</li>
 		<li>Use webSocket (socket.io) to keep conn. open between server and client
 			<ul>
-			<li>Notify a host that a client connected.</li>
-			<li>Send click updates to clients?</li>
+			<li><strike>Notify a host that a client connected.</strike></li>
+			<li><strike>Send click updates to clients?</strike></li>
 			<li>Detect a client disconnected (and drop game invites etc.)</li>
 			<li>Notify players that opponent disconnected.</li>
 			</ul>
@@ -30,7 +30,7 @@
 	<li>Design Changes
 		<ul>
 		<li>Title screen</li>
-		<li>Opening Screen: Host/Join/Offline</li>
+		<li><strike>Opening Screen: Host/Join/Offline</strike></li>
 		</ul>
 	</li>
 	<li>Game invite
