Added user profiles to README

--- a/public/README.html
+++ b/public/README.html
@@ -46,6 +46,7 @@
 		</ul>
 	</li>
 	<li>Better background colors for cell tiles; both red+blue</li>
+	<li>User profiles with game statistics</li>
 	
 
 </ul>
