Added undo/recording/playback to README

--- a/public/README.html
+++ b/public/README.html
@@ -47,6 +47,9 @@
 	</li>
 	<li>Better background colors for cell tiles; both red+blue</li>
 	<li>User profiles with game statistics</li>
+	<li>Undo button</li>
+	<li>Recording</li>
+	<li>Recording playback</li>
 	
 
 </ul>
