--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,7 @@
 	<div id="start-window" class="menu">
 		<input type="button" id="start-host" value="Host Game" onclick="showView('host')">
 		<input type="button" id="start-join" value="Join Game" onclick="showView('join')">
-		<input type="button" id="start-local" style="display:none" onclick="playOffline()">
-		<label for="start-local"><center>
-			<span>
-			Play Local
-			<input type="text" value="15" maxlength="2" style="width:20px"></input>
-			x
-			<input type="text" value="10" maxlength="2" style="width:20px"></input></center>
-			</span>
-		</label>
+		<input type="button" id="start-local" value="Play Local" onclick="playOffline()">
 	</div>
 
 	<div id="host-window" class="menu" style="display:none">
