Added wishful README

--- a/public/README.html
+++ b/public/README.html
@@ -42,7 +42,7 @@
 		<ul>
 		<li>For progress bars</li>
 		<li>To show contiguous groups of cells</li>
-		<li>Animations? At least for destruction/upgrade</li>
+		<li>Animations? At least for destruction/upgrade. Use div with 100% background fill instead</li>
 		</ul>
 	</li>
 	<li>Better background colors for cell tiles; both red+blue</li>
