Made client{} a global var

--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
 		return obj;
 	}//getGameSpecs
 	
-	let client = {};
+	client = {};
 
 	let views = {
 		menu: document.getElementById("menu-window"),
